--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-MONGO_URI="mongodb://mujtaba:mujtaba@1234@localhost:27017/superData"
+MONGO_URI='mongodb://localhost:27017/superData'
+MONGO_USERNAME=mujtaba
+MONGO_PASSWORD=mujtaba1234
+MONGO_HOST=localhost
+MONGO_PORT=27017
+MONGO_DBNAME=superData
