--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/traverse": "^7.26.10",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "form-data": "^4.0.4",
     "mocha-junit-reporter": "^2.2.1",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "chai": "*",
     "chai-http": "*",
-    "mocha": "*"
+    "mocha": "*",
+    "mongodb-memory-server": "^10.3.0"
   }
 }
