--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI='mongodb://localhost:27017/superData'
+MONGO_URI='mongodb://mujtaba:mujtaba1234@localhost:27017/superData'
 MONGO_USERNAME=mujtaba
 MONGO_PASSWORD=mujtaba1234
 MONGO_HOST=localhost
