--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MONGO_URI='mongodb://mujtaba:mujtaba1234@localhost:27017/superData'
-MONGO_USERNAME=mujtaba
+MONGO_URI='mongodb+srv://us-visa.xixp6rv.mongodb.net/superData'
+MONGO_USERNAME=mujtaba7794
 MONGO_PASSWORD=mujtaba1234
-MONGO_HOST=localhost
+# MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_DBNAME=superData
